Basic create/edit of applications

--- a/savas/Themes/savas/default/src/assets/less/_views/login.less
+++ b/savas/Themes/savas/default/src/assets/less/_views/login.less
@@ -2,13 +2,13 @@ div.is--login {
   margin: 50px auto;
   width: 300px;
   div.header {
-    font: 32px 'Inconsolata', monospace;
+    .header-font;
     padding: 5px 15px;
   }
   div.form {
     background: #fff;
     padding: 15px;
-    border-top: 5px solid #9b59b6;
+    border-top: 5px solid @theme-color;
     box-shadow: 2px 2px 16px rgba(0, 0, 0, 0.1);
   }
   .form-result {
