--- a/savas/Themes/savas/default/src/assets/less/all.less
+++ b/savas/Themes/savas/default/src/assets/less/all.less
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Inconsolata');
-
-@import "_views/login";
+@container-width: 960px;
+@theme-color: #9b59b6;
 
 #app {
+  display: flex;
+  flex-direction: column;
   > .loader {
     position: fixed;
     width: 50px;
@@ -19,12 +20,21 @@
       color: #666;
     }
   }
+  > .view {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
-.form-item {
-  margin: 0 0 10px 0;
+.header-font {
+  font: 32px 'Inconsolata', monospace;
 }
 
-button {
-  background: #9b59b6;
-}
+@import "_views/login";
+
+@import "_components/header";
+@import "_components/content";
+@import "_components/breadcrumb";
+@import "_components/form";
+@import "_components/message";
