--- a/savas/Themes/savas/default/src/assets/less/_views/application/list.less
+++ b/savas/Themes/savas/default/src/assets/less/_views/application/list.less
@@ -1,14 +1,29 @@
 .is--application-list {
-  .grid-controls {
-    background: #fff;
-    padding: 10px;
-    list-style: none;
+  .grid-header {
     display: flex;
     flex-direction: row;
+    background: #fff;
+    padding: 10px;
     margin: 0 0 10px 0;
-    justify-content: flex-end;
-    li {
-
+    .search {
+      width: 300px;
+      display: flex;
+      flex-direction: row;
+      span.search-result {
+        color: #999;
+        margin: 0 15px;
+        display: flex;
+        align-items: center;
+      }
+    }
+    .grid-controls {
+      display: flex;
+      flex-direction: row;
+      flex: 1;
+      justify-content: flex-end;
+      button {
+        margin: 0 0 0 5px;
+      }
     }
   }
   .application-items {
