Add action hover-color

--- a/savas/Themes/savas/default/src/assets/less/_views/application/list.less
+++ b/savas/Themes/savas/default/src/assets/less/_views/application/list.less
@@ -74,6 +74,9 @@
           color: #666;
           text-decoration: none;
           margin: 0 10px 0 0;
+          &:hover {
+            color: #000;
+          }
           &:last-child {
             margin: 0;
           }
