Improve responsive design

--- a/savas/Themes/savas/default/src/assets/less/_components/content.less
+++ b/savas/Themes/savas/default/src/assets/less/_components/content.less
@@ -2,8 +2,8 @@
   flex: 1;
   overflow-y: auto;
   .content {
-    width: @container-width;
+    max-width: @container-width;
     margin: 0 auto;
-    padding: 10px 0;
+    padding: 10px;
   }
 }
