--- a/savas/Themes/savas/default/src/assets/less/_components/header.less
+++ b/savas/Themes/savas/default/src/assets/less/_components/header.less
@@ -6,7 +6,7 @@
   .header {
     display: flex;
     flex-direction: row;
-    width: @container-width;
+    max-width: @container-width;
     margin: 0 auto;
     .header-title {
       color: #fff;
