--- a/savas/Themes/savas/default/src/assets/less/_components/breadcrumb.less
+++ b/savas/Themes/savas/default/src/assets/less/_components/breadcrumb.less
@@ -21,6 +21,7 @@
         display: inline-block;
         padding: 10px 15px;
         text-transform: uppercase;
+        outline: 0 none;
         &:hover {
           color: darken(@theme-color, 10);
         }
