Working on channel/platform management

--- a/savas/Themes/savas/default/src/assets/less/all.less
+++ b/savas/Themes/savas/default/src/assets/less/all.less
@@ -33,6 +33,7 @@
 
 @import "_views/login";
 @import "_views/application/list";
+@import "_views/application/settings";
 
 @import "_components/header";
 @import "_components/content";
