Inline grid to handle user related channels/platforms

--- a/savas/Themes/savas/default/src/assets/less/_views/application/settings.less
+++ b/savas/Themes/savas/default/src/assets/less/_views/application/settings.less
@@ -1,18 +1,3 @@
-.is--aplication-settings {
-  .channels-editor {
-    .channel-item {
-      .item-label {
+.is--application-settings {
 
-      }
-      .item-description {
-
-      }
-      .item-actions {
-
-      }
-    }
-    button {
-
-    }
-  }
 }
