--- a/savas/Themes/savas/default/src/assets/less/all.less
+++ b/savas/Themes/savas/default/src/assets/less/all.less
@@ -40,3 +40,4 @@
 @import "_components/breadcrumb";
 @import "_components/form";
 @import "_components/message";
+@import "_components/inline-grid";
