Move application detail to tab-menu

--- a/savas/Themes/savas/default/src/assets/less/all.less
+++ b/savas/Themes/savas/default/src/assets/less/all.less
@@ -31,6 +31,17 @@
   font: 32px 'Inconsolata', monospace;
 }
 
+.tab-menu {
+  background: #fff;
+  .tab-content {
+    .tab-item {
+      .form-container {
+        padding: 0;
+      }
+    }
+  }
+}
+
 @import "_views/login";
 @import "_views/application/list";
 @import "_views/application/settings";
