Improve form element for faster coding

--- a/savas/Themes/savas/default/src/assets/less/_components/inline-grid.less
+++ b/savas/Themes/savas/default/src/assets/less/_components/inline-grid.less
@@ -39,12 +39,19 @@
         font-size: 20px;
         padding: 10px;
       }
-      .modal-form {
-        padding: 0 10px;
-      }
-      .modal-actions {
-        padding: 10px;
-        background: rgba(0, 0, 0, 0.1);
+      .form-container {
+        padding: 0;
+        form {
+          padding: 10px;
+        }
+        .form-buttons {
+          background: rgba(0, 0, 0, 0.1);
+          padding: 10px;
+          margin: 0;
+          button {
+            margin: 0 5px 0 0;
+          }
+        }
       }
     }
   }
