--- a/savas/Themes/savas/default/src/assets/less/_components/form.less
+++ b/savas/Themes/savas/default/src/assets/less/_components/form.less
@@ -2,14 +2,41 @@ button {
   background: @theme-color;
 }
 
-.form-item {
-  margin: 0 0 10px 0;
-}
-
 div.form-container {
   background: #fff;
   padding: 10px;
+  position: relative;
   form {
-
+    .form-item {
+      margin: 0 0 10px 0;
+      &:last-child {
+        margin: 0;
+      }
+    }
+  }
+  .form-buttons {
+    margin: 10px 0 0 0;
+  }
+  .loading-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.75);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 110;
+    opacity: 1;
+    transition: opacity 0.125s;
+    &.is--hidden {
+      pointer-events: none;
+      opacity: 0;
+    }
+    svg {
+      font-size: 32px;
+      color: #666;
+    }
   }
 }
