--- a/savas/Themes/savas/default/src/assets/less/all.less
+++ b/savas/Themes/savas/default/src/assets/less/all.less
@@ -35,7 +35,7 @@
   background: #fff;
   .tab-content {
     .tab-item {
-      .form-container {
+      > .form-container {
         padding: 0;
       }
     }
