--- a/savas/Themes/savas/default/src/assets/less/all.less
+++ b/savas/Themes/savas/default/src/assets/less/all.less
@@ -59,6 +59,7 @@
 @import "_views/login";
 @import "_views/application/list";
 @import "_views/application/settings";
+@import "_views/release/list";
 
 @import "_components/header";
 @import "_components/content";
