--- a/savas/Themes/savas/default/src/assets/less/all.less
+++ b/savas/Themes/savas/default/src/assets/less/all.less
@@ -66,5 +66,6 @@
 @import "_components/breadcrumb";
 @import "_components/form";
 @import "_components/message";
-@import "_components/inline-grid";
 @import "_components/grid-header";
+@import "_components/grid";
+@import "_components/modal-form";
