--- a/savas/Themes/savas/default/src/assets/less/_views/release/list.less
+++ b/savas/Themes/savas/default/src/assets/less/_views/release/list.less
@@ -1,44 +1,36 @@
 .is--release-list {
-  .release-items {
+  .grid-item.release {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: auto 1fr auto auto;
     grid-gap: 10px;
-    .release-item {
-      background: #fff;
-      padding: 10px;
-      box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.05);
-      display: grid;
-      grid-template-columns: auto 1fr auto auto;
-      grid-gap: 10px;
-      .item-label {
-        font-size: 18px;
-      }
-      .item-description {
-        display: flex;
-        align-items: center;
+    .item-label {
+      font-size: 18px;
+    }
+    .item-description {
+      display: flex;
+      align-items: center;
+      font-size: 12px;
+      color: #999;
+    }
+    .item-channel {
+      display: flex;
+      align-items: center;
+      font-size: 12px;
+    }
+    .item-actions {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      a {
         font-size: 12px;
-        color: #999;
-      }
-      .item-channel {
-        display: flex;
-        align-items: center;
-        font-size: 12px;
-      }
-      .item-actions {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        a {
-          font-size: 12px;
-          color: #666;
-          text-decoration: none;
-          margin: 0 10px 0 0;
-          &:hover {
-            color: #000;
-          }
-          &:last-child {
-            margin: 0;
-          }
+        color: #666;
+        text-decoration: none;
+        margin: 0 10px 0 0;
+        &:hover {
+          color: #000;
+        }
+        &:last-child {
+          margin: 0;
         }
       }
     }
