Basic file uploading

--- a/savas/Themes/savas/default/src/assets/less/_components/modal-form.less
+++ b/savas/Themes/savas/default/src/assets/less/_components/modal-form.less
@@ -9,6 +9,9 @@
       form {
         padding: 10px;
       }
+      div.select {
+        z-index: 150;
+      }
       .form-buttons {
         background: rgba(0, 0, 0, 0.1);
         padding: 10px;
