--- a/savas/Themes/savas/default/src/assets/less/all.less
+++ b/savas/Themes/savas/default/src/assets/less/all.less
@@ -60,6 +60,7 @@
 @import "_views/application/list";
 @import "_views/application/settings";
 @import "_views/release/list";
+@import "_views/file/grid";
 
 @import "_components/header";
 @import "_components/content";
