--- a/savas/Themes/savas/default/src/assets/less/_components/form.less
+++ b/savas/Themes/savas/default/src/assets/less/_components/form.less
@@ -38,5 +38,11 @@ div.form-container {
       font-size: 32px;
       color: #666;
     }
+    .loading-progress {
+      width: 80%;
+      .progress-bar-container {
+        opacity: 0.9;
+      }
+    }
   }
 }
