--- a/savas/Themes/savas/default/src/assets/less/_views/file/grid.less
+++ b/savas/Themes/savas/default/src/assets/less/_views/file/grid.less
@@ -14,25 +14,20 @@
   }
   .item-label {
     font-size: 12px;
-    grid-column: ~"1 / 2";
+    grid-column: ~"1 / 3";
     grid-row: ~"2 / 3";
-    text-align: right;
+    text-align: center;
   }
-  .item-size {
-    font-size: 12px;
-    color: #666;
-    grid-column: ~"2 / 3";
-    grid-row: ~"2 / 3";
-  }
-  .item-platform {
+  .item-meta {
     grid-column: ~"1 / 3";
     grid-row: ~"3 / 4";
     text-align: center;
-    span {
+    .meta-item {
       background: rgba(0, 0, 0, 0.1);
       font-size: 12px;
       padding: 2px 10px;
       border-radius: 15px;
+      display: inline-block;
     }
   }
   .item-actions {
