Several usability improvements

--- a/savas/Themes/savas/default/src/assets/less/all.less
+++ b/savas/Themes/savas/default/src/assets/less/all.less
@@ -1,6 +1,10 @@
 @container-width: 960px;
 @theme-color: #9b59b6;
 
+* {
+  font-family: 'Nunito', sans-serif;
+}
+
 #app {
   display: flex;
   flex-direction: column;
