--- a/savas/Themes/savas/default/src/assets/less/_components/message.less
+++ b/savas/Themes/savas/default/src/assets/less/_components/message.less
@@ -2,6 +2,7 @@
   background: #fff;
   padding: 10px;
   margin: 0 0 10px 0;
+  border: 1px solid #ccc;
   border-left: 5px solid #ccc;
   &.is--error {
     border-color: #e74c3c;
