Start to implement api keys

--- a/savas/Themes/savas/default/src/assets/less/all.less
+++ b/savas/Themes/savas/default/src/assets/less/all.less
@@ -65,6 +65,7 @@
 @import "_views/application/settings";
 @import "_views/release/list";
 @import "_views/file/grid";
+@import "_views/token/grid";
 
 @import "_components/header";
 @import "_components/content";
