savas: working on new design

--- a/savas/Views/frontend/index.html
+++ b/savas/Views/frontend/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>savas - a http service to serve application releases</title>
+    <title>savas - An http-service to serve updates for your applications</title>
 
-    <link rel="shortcut icon" type="image/png" href="static/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="/static/favicon.png">
 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata|Nunito|Ubuntu">
 </head>
