--- a/savas/Views/frontend/src/assets/less/_components/breadcrumb.less
+++ b/savas/Views/frontend/src/assets/less/_components/breadcrumb.less
@@ -1,7 +1,10 @@
 .breadcrumb-container {
   margin: 0 0 10px 0;
   background: #fff;
-  border-left: 5px solid darken(@theme-color, 5);
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding: 0 5px;
   ul {
     display:flex;
     flex-direction: row;
@@ -17,10 +20,9 @@
       a {
         color: #000;
         text-decoration: none;
-        font-size: 12px;
+        font-size: 16px;
         display: inline-block;
         padding: 10px 15px;
-        text-transform: uppercase;
         outline: 0 none;
         &:hover {
           color: darken(@theme-color, 10);
@@ -31,6 +33,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        color: #ccc;
       }
     }
   }
