--- a/savas/Views/frontend/src/assets/less/all.less
+++ b/savas/Views/frontend/src/assets/less/all.less
@@ -75,3 +75,5 @@
 @import "_components/grid-header";
 @import "_components/grid";
 @import "_components/modal-form";
+
+@import "_components/data-grid";
