--- a/savas/Views/frontend/src/assets/less/_components/grid-header.less
+++ b/savas/Views/frontend/src/assets/less/_components/grid-header.less
@@ -1,27 +1,29 @@
-.grid-header {
-  display: flex;
-  flex-direction: row;
-  background: #fff;
-  padding: 10px;
-  margin: 0 0 10px 0;
-  .search {
-    width: 300px;
+.grid {
+  .grid-header {
     display: flex;
     flex-direction: row;
-    span.search-result {
-      color: #999;
-      margin: 0 15px;
+    background: #fff;
+    padding: 10px;
+    margin: 0 0 10px 0;
+    .search {
+      width: 300px;
       display: flex;
-      align-items: center;
+      flex-direction: row;
+      span.search-result {
+        color: #999;
+        margin: 0 15px;
+        display: flex;
+        align-items: center;
+      }
     }
-  }
-  .grid-controls {
-    display: flex;
-    flex-direction: row;
-    flex: 1;
-    justify-content: flex-end;
-    button {
-      margin: 0 0 0 5px;
+    .grid-controls {
+      display: flex;
+      flex-direction: row;
+      flex: 1;
+      justify-content: flex-end;
+      button {
+        margin: 0 0 0 5px;
+      }
     }
   }
 }
