--- a/Views/frontend/src/assets/less/_components/data-grid.less
+++ b/Views/frontend/src/assets/less/_components/data-grid.less
@@ -55,6 +55,11 @@
       }
     }
   }
+  .grid-empty {
+    background: #fff;
+    padding: 15px;
+    text-align: center;
+  }
   .grid-row {
     background: #fff;
     &.main {
