--- a/Views/frontend/src/assets/less/all.less
+++ b/Views/frontend/src/assets/less/all.less
@@ -2,7 +2,7 @@
 @theme-color: #9b59b6;
 
 * {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Nunito', sans-serif !important;
 }
 
 #app {
@@ -65,6 +65,7 @@
 @import "_views/application/settings";
 @import "_views/release/list";
 @import "_views/file/grid";
+@import "_views/file/requirements";
 @import "_views/token/grid";
 
 @import "_components/header";
@@ -77,3 +78,4 @@
 @import "_components/modal-form";
 
 @import "_components/data-grid";
+@import "_components/sidebar-tabmenu";
