--- a/Views/frontend/src/assets/less/_components/header.less
+++ b/Views/frontend/src/assets/less/_components/header.less
@@ -30,6 +30,7 @@
         padding: 0 40px 0 15px;
         width: 200px;
         transition: all 0.25s ease;
+        font-size: 16px;
         &:focus, &:active {
           width: 300px;
         }
@@ -81,6 +82,7 @@
           justify-content: center;
           align-items: center;
           border-radius: 40px;
+          font-size: 16px;
           &.router-link-exact-active  {
             background: #eee;
           }
