--- a/Views/frontend/src/assets/less/_views/file/grid.less
+++ b/Views/frontend/src/assets/less/_views/file/grid.less
@@ -1,51 +1,54 @@
-.grid-item.file {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto auto auto;
-  grid-gap: 5px;
-  .item-icon {
-    display: flex;
-    justify-content: center;
-    font-size: 48px;
-    color: #333;
-    padding: 45px 0;
-    grid-column: ~"1 / 3";
-    grid-row: ~"1 / 2";
-  }
-  .item-label {
-    font-size: 12px;
-    grid-column: ~"1 / 3";
-    grid-row: ~"2 / 3";
-    text-align: center;
-  }
-  .item-meta {
-    grid-column: ~"1 / 3";
-    grid-row: ~"3 / 4";
-    text-align: center;
-    .meta-item {
-      background: rgba(0, 0, 0, 0.1);
-      font-size: 12px;
-      padding: 2px 10px;
-      border-radius: 15px;
-      display: inline-block;
+.modal-container.file-form {
+  .modal {
+    border-radius: 15px;
+    position: relative;
+    min-width: 960px;
+    .modal-header {
+      height: 60px;
+      font-size: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
-  }
-  .item-actions {
-    margin: 10px 0 0 0;
-    display: flex;
-    justify-content: center;
-    grid-column: ~"1 / 3";
-    grid-row: ~"5 / 6";
-    a {
-      font-size: 12px;
-      color: #666;
-      text-decoration: none;
-      margin: 0 10px 0 0;
-      &:hover {
-        color: #000;
+    .form-container {
+      position: static;
+      background: none;
+      padding: 20px;
+      .form-item {
+        width: 450px;
+        margin-right: 15px;
+        .file-input {
+          height: 40px;
+          background: #eee;
+          border: none;
+          box-shadow: none;
+          border-radius: 10px;
+          padding: 0 0 0 15px;
+          input#file {
+            border: none;
+            box-shadow: none;
+            background: none;
+          }
+          button {
+            border: none;
+            box-shadow: none;
+            background: none;
+            color: #666;
+            font-size: 20px;
+          }
+        }
       }
-      &:last-child {
-        margin: 0;
+      .form-buttons {
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin: 15px;
+        button {
+          margin: 0 0 0 15px;
+          &.secondary {
+            background: rgba(0, 0, 0, 0.2);
+          }
+        }
       }
     }
   }
