--- a/Views/frontend/src/assets/less/_views/login.less
+++ b/Views/frontend/src/assets/less/_views/login.less
@@ -27,41 +27,14 @@ div.is--login {
     .login-form {
       width: 400px;
       margin: 0 auto;
-      div.form-item {
-        label {
-          text-align: center;
-          display: block;
-          margin: 25px 0 10px 0;
-          font-size: 16px;
-        }
-        .form-input {
-          input {
-            height: 40px;
-            background: #eee;
-            border: none;
-            box-shadow: none;
-            border-radius: 10px;
-            padding: 0 15px;
-            text-align: center;
-          }
-        }
+      .form-item label {
+        margin-top: 25px;
+        text-align: center;
       }
-      div.form-buttons {
-        margin: 25px 0 5px 0;
-        display: flex;
-        justify-content: center;
-        button {
-          width: 122px;
-          height: 40px;
-          box-shadow: none;
-          border-radius: 10px;
-          cursor: pointer;
-          .text {
-            font-size: 16px;
-          }
-        }
+      .form-item input {
+        text-align: center;
       }
-      div.form-result {
+      .message-container {
         background: #e74c3c;
         padding: 10px;
         text-align: center;
@@ -69,6 +42,7 @@ div.is--login {
         color: #fff;
         margin: 15px 0 0 0;
         position: relative;
+
         &:after {
           bottom: 100%;
           left: 50%;
